Use Stream.toList() instead of collect with Colloectors.toList()