@@ -30,7 +30,6 @@ import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Locale;
-import java.util.stream.Collectors;
 import org.tweetwallfx.devoxx.api.cfp.client.CFPClient;
 import org.tweetwallfx.devoxx.api.cfp.client.VotingResultTalk;
 import org.tweetwallfx.stepengine.api.DataProvider;
@@ -72,7 +71,7 @@ public final class TopTalksTodayDataProvider implements DataProvider, DataProvid
                         .reversed())
                 .limit(config.nrVotes())
                 .map(VotedTalk::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static String averageFormattedVote(final VotingResultTalk ratedTalk) {
